Renamed to angular-pdfjs-viewer Demo don't load own repo from bower Fix issues with jQlite Doc new features in README

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-pdfjs",
-  "description": "Embed PDF.js into your angular application",
+  "name": "angular-pdfjs-viewer",
+  "description": "Embed PDF.js viewer into your angular application",
   "license": "MIT",
   "main": "dist/angular-pdfjs.js",
   "repository": {
