--- a/demo/bower.json
+++ b/demo/bower.json
@@ -4,8 +4,7 @@
   "license": "MIT",
   "private": "true",
   "dependencies": {
-	"angular": "~1.4.3",
-	"pdf.js-viewer": "https://github.com/legalthings/pdf.js-viewer.git#0.1.0",
-    "angular-pdfjs": "git@github.com:legalthings/angular-pdfjs.git#~0.4.0"
+    "angular": "~1.4.3",
+	  "pdf.js-viewer": "https://github.com/legalthings/pdf.js-viewer.git#0.1.0"
   }
 }
