--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-pdfjs",
-  "description": "Embed PDF.js into your angular application",
+  "name": "angular-pdfjs-viewer",
+  "description": "Embed PDF.js viewer into your angular application",
   "version": "1.0.0",
   "dependencies": {},
   "license": "proprietary",
