--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
   },
   "dependencies": {
     "angular": "~1.4.3",
-    "pdf.js-viewer": "~0.2.2"
+    "pdf.js-viewer": "0.2.2"
   },
   "ignore": [
     "**/.*",
