Updated pdfjsViewer's template so it includes printContainer, fixes #4

--- a/demo/bower.json
+++ b/demo/bower.json
@@ -5,6 +5,6 @@
   "private": "true",
   "dependencies": {
     "angular": "~1.4.3",
-	  "pdf.js-viewer": "https://github.com/legalthings/pdf.js-viewer.git#0.1.0"
+    "pdf.js-viewer": "~0.2.2"
   }
 }
