--- a/demo/package.json
+++ b/demo/package.json
@@ -7,5 +7,8 @@
     "cors": "^2.7.1",
     "express": "^4.13.3"
   },
+  "scripts": {
+    "postinstall": "bower install"
+  },
   "license": "proprietary"
 }
